--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.MovieActivity" />
+        <activity
+            android:name=".ui.activities.MovieActivity"
+            android:parentActivityName=".ui.activities.MainActivity" />
     </application>
 
 </manifest>
