--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,13 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".ui.activities.MainActivity"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.activities.MovieActivity"
-            android:parentActivityName=".ui.activities.MainActivity" />
     </application>
 
 </manifest>
