--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
+    //TapTargetView
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.12.0'
     //Test
     implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
